--- a/doc/CHANGES.txt
+++ b/doc/CHANGES.txt
@@ -40,3 +40,5 @@ Zope Changes
         According to consensus in z3-five mailing list:
         http://codespeak.net/pipermail/z3-five/2006q2/001474.html
         
+      - The defaultView directive now only looks up views, not attributes.
+      
