--- a/doc/CHANGES.txt
+++ b/doc/CHANGES.txt
@@ -30,7 +30,7 @@ Zope Changes
       - added 'fast_listen' directive to http-server and webdav-source-server
         sections in etc/zope.conf in order to defer the opening of the sockets
         until the late startup phase. This in in particular useful when running
-        Zope behind a loadbalancer.
+        Zope behind a loadbalancer (patch by Patrick Gerken).
 
     Bugs Fixed
 
