--- a/doc/CHANGES.txt
+++ b/doc/CHANGES.txt
@@ -101,6 +101,8 @@ Zope Changes
 
     Bugs Fixed
 
+      - integrated theuni's additional test from 2.11 (see r73132)
+
       - Relaxed requirements for context of
         Products.Five.browser.pagetemplatefile.ZopeTwoPageTemplateFile,
         to reduce barriers for testing renderability of views which use them.
