--- a/doc/CHANGES.txt
+++ b/doc/CHANGES.txt
@@ -4,6 +4,10 @@ Zope Changes
   Change information for previous versions of Zope can be found in the
   file HISTORY.txt.
 
+  Todo
+
+     - Fix ZClasses (once again)
+
   Trunk  (unreleased)
 
     Restructuring
